--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -60,7 +60,7 @@ header {
 
   font-size: 1.5rem;
 
-  color: white;
+  color: black;
   border: none;
   border-radius: var(--rounded);
   background: var(--secondary-color);
