--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -2,7 +2,8 @@
   font-family: "Inter", sans-serif;
   --primary-color: #003d7a;
   --secondary-color: #00aeef;
-  --accent-color: #ffa500;
+  --accent-color1: #ffa500;
+  --accent-color2: #0062B3;
   --card-bg: #f8f9fa;
   
   --rounded: 10px;
@@ -150,7 +151,7 @@ main h1 {
 }
 
 .badge-gold {
-  background: var(--accent-color);
+  background: var(--accent-color1);
 }
 
 .badge-silver {
@@ -432,7 +433,7 @@ main h1 {
 
 .join-btn:hover, .learn-more:hover, .btn-primary:hover {
   color: black;
-  background: var(--accent-color);
+  background: var(--accent-color1);
 }
 
 
@@ -666,7 +667,7 @@ main h1 {
 }
 
 .gold-card {
-  border-color: var(--accent-color);
+  border-color: var(--accent-color1);
 }
 
 .card .price {
@@ -703,7 +704,7 @@ main h1 {
 }
 
 .modal h3 {
-  color: var(--secondary-color);
+  color: var(--accent-color2);
 }
 
 .modal ul {
@@ -853,7 +854,7 @@ footer {
 
 .project-name {
   font-weight: bold;
-  color: var(--accent-color);
+  color: var(--accent-color1);
 }
 
 .footer-bottom {
